feat: - userLogout endpoint and swagger documentation
